--- a/Concept/Code/graph.html
+++ b/Concept/Code/graph.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>d3.js force-directed graph with randomly-colored circles as nodes and accompanying text labels</title>
+  <title>Clusters</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src ="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.14/d3.js"></script>
   
